Fix module unload of dtrace, sdt and fbt

- Don't unload when there are users of dtrace
- Forbid auto unloading (not supported for now)

PR 49695